// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button className="commit-filter-button"/> renders correctly 1`] = `
<button
  className="button-component commit-filter-button"
  onClick={[Function]}
/>
`;

exports[`<Button className="issue-filter-button"/> renders correctly 1`] = `
<button
  className="button-component issue-filter-button"
  onClick={[Function]}
/>
`;

exports[`<Button className="search-button"/> renders correctly 1`] = `
<button
  className="button-component search-button"
  onClick={[Function]}
/>
`;

exports[`<Button className="user-filter-button"/> renders correctly 1`] = `
<button
  className="button-component user-filter-button"
  onClick={[Function]}
/>
`;

exports[`App renders correctly 1`] = `
<div
  className="sc-bcXHqe nButd"
  data-testid="wrapper"
>
  <div
    className="App"
  >
    <div
      id="HeaderContainer"
    >
      <img
        alt="MeshLab header"
        id="headerImg"
        src="header.png"
      />
    </div>
    <div
      className="theme-container"
      data-testid="div-container"
    >
      <button
        className="button-component change-theme-button"
        data-testid="change-theme-button"
        onClick={[Function]}
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-wand-magic-sparkles "
          data-icon="wand-magic-sparkles"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 576 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M234.7 42.7L197 56.8c-3 1.1-5 4-5 7.2s2 6.1 5 7.2l37.7 14.1L248.8 123c1.1 3 4 5 7.2 5s6.1-2 7.2-5l14.1-37.7L315 71.2c3-1.1 5-4 5-7.2s-2-6.1-5-7.2L277.3 42.7 263.2 5c-1.1-3-4-5-7.2-5s-6.1 2-7.2 5L234.7 42.7zM46.1 395.4c-18.7 18.7-18.7 49.1 0 67.9l34.6 34.6c18.7 18.7 49.1 18.7 67.9 0L529.9 116.5c18.7-18.7 18.7-49.1 0-67.9L495.3 14.1c-18.7-18.7-49.1-18.7-67.9 0L46.1 395.4zM484.6 82.6l-105 105-23.3-23.3 105-105 23.3 23.3zM7.5 117.2C3 118.9 0 123.2 0 128s3 9.1 7.5 10.8L64 160l21.2 56.5c1.7 4.5 6 7.5 10.8 7.5s9.1-3 10.8-7.5L128 160l56.5-21.2c4.5-1.7 7.5-6 7.5-10.8s-3-9.1-7.5-10.8L128 96 106.8 39.5C105.1 35 100.8 32 96 32s-9.1 3-10.8 7.5L64 96 7.5 117.2zm352 256c-4.5 1.7-7.5 6-7.5 10.8s3 9.1 7.5 10.8L416 416l21.2 56.5c1.7 4.5 6 7.5 10.8 7.5s9.1-3 10.8-7.5L480 416l56.5-21.2c4.5-1.7 7.5-6 7.5-10.8s-3-9.1-7.5-10.8L480 352l-21.2-56.5c-1.7-4.5-6-7.5-10.8-7.5s-9.1 3-10.8 7.5L416 352l-56.5 21.2z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
        Change theme
      </button>
    </div>
    <div
      className="search-container"
    >
      <input
        className="input-field URL-input"
        data-testid="search-input"
        onChange={[Function]}
        placeholder="Insert your gitlab project url"
        type="text"
      />
      <input
        className="input-field undefined"
        onChange={[Function]}
        placeholder="Insert access token"
        type="text"
      />
      <button
        className="button-component search-button"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-magnifying-glass "
          data-icon="magnifying-glass"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352c79.5 0 144-64.5 144-144s-64.5-144-144-144S64 128.5 64 208s64.5 144 144 144z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
         GET 
      </button>
    </div>
    <div
      className="filter-container"
    >
      <button
        className="button-component user-filter-button"
        onClick={[Function]}
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-user "
          data-icon="user"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0S96 57.3 96 128s57.3 128 128 128zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
         USERS 
      </button>
      <button
        className="button-component commit-filter-button"
        onClick={[Function]}
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-pen "
          data-icon="pen"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M362.7 19.3L314.3 67.7 444.3 197.7l48.4-48.4c25-25 25-65.5 0-90.5L453.3 19.3c-25-25-65.5-25-90.5 0zm-71 71L58.6 323.5c-10.4 10.4-18 23.3-22.2 37.4L1 481.2C-1.5 489.7 .8 498.8 7 505s15.3 8.5 23.7 6.1l120.3-35.4c14.1-4.2 27-11.8 37.4-22.2L421.7 220.3 291.7 90.3z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
         COMMITS 
      </button>
      <button
        className="button-component issue-filter-button"
        onClick={[Function]}
      >
        <svg
          aria-hidden="true"
          className="svg-inline--fa fa-triangle-exclamation "
          data-icon="triangle-exclamation"
          data-prefix="fas"
          focusable="false"
          role="img"
          style={Object {}}
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M256 32c14.2 0 27.3 7.5 34.5 19.8l216 368c7.3 12.4 7.3 27.7 .2 40.1S486.3 480 472 480H40c-14.3 0-27.6-7.7-34.7-20.1s-7-27.8 .2-40.1l216-368C228.7 39.5 241.8 32 256 32zm0 128c-13.3 0-24 10.7-24 24V296c0 13.3 10.7 24 24 24s24-10.7 24-24V184c0-13.3-10.7-24-24-24zm32 224c0-17.7-14.3-32-32-32s-32 14.3-32 32s14.3 32 32 32s32-14.3 32-32z"
            fill="currentColor"
            style={Object {}}
          />
        </svg>
         ISSUES 
      </button>
    </div>
    <div />
  </div>
  <div
    id="FooterContainer"
  >
    Created by Group 17 
    <sup>
      "TM"
    </sup>
  </div>
</div>
`;
